<resources>
    <string name="app_name">TourApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="my_trips_fragment_label">Mis Viajes</string>
    <string name="trip_details_fragment_label">Detalle Del Viaje</string>
    <string name="trip_qr_fragment_label">Certificados</string>
    <string name="new_trip_fragment_label">Nuevo Viaje</string>
    <string name="trips_fragment_label">Viajes</string>
    <string name="next">Siguiente</string>
    <string name="previous">Previous</string>
    <string name="new_trip_button">Nuevo Viaje</string>
    <string name="search_placeholder">Buscar…</string>
    <string name="trip_state_content_destription">Estado del viaje</string>
    <string name="trip_name_text">%s - %s</string>
    <string name="trip_date_hour">%s - %shs</string>
    <string name="trip_id">Viaje %d</string>
    <string name="trip_origin_destination_hour">%s - %s - %s hs</string>

    <string-array name="trip_state_list">
        <item>CONFIRMED</item>
        <item>DELAYED</item>
        <item>PROCESSING</item>
        <item>CANCELLED</item>
    </string-array>

    <!-- trip Details -->

    <string name="details_alert_title">¿Desea salir sin guardar?</string>
    <string name="details_alert_message">Existen cambios sin guardar, ¿seguro desea salir?</string>
    <string name="details_alert_yes">SI</string>
    <string name="details_alert_no">NO</string>
    <string name="details_trip_name">Mercedes - Capital Federal</string>
    <string name="details_passengers">Pasajero</string>
    <string name="details_departure_location">Origen</string>
    <string name="details_arrival_location">Destino</string>
    <string name="details_details_date">Fecha</string>
    <string name="details_departure_time">Hora de Salida</string>
    <string name="details_departure_stop">Parada de Salida</string>
    <string name="details_arrival_stop">Parada de Llegada</string>
    <string name="details_qr_button">Certificados</string>
    <string name="details_cancel_button">Cancelar</string>
    <string name="details_save_button">Guardar</string>
    <string name="details_back_button">Volver</string>
    <string name="details_share_button">Compartir</string>
    <string name="details_info">* Los viajes se pueden editar hasta 24 hs antes de la partida</string>
    <string name="trip_state">Estado</string>

    <!-- trip Qr -->
    <string name="generate_qr_error">Error al generar el Qr, intente de nuevo mas tarde</string>

    <!-- API errors -->
    <string name="get_trips_error">Error obteniendo viajes</string>
    <string name="modify_ticket_error">Error al guardar, intente de nuevo mas tarde</string>
    <string name="get_login_error">Error intentando loguear al usuario</string>
    <string name="get_user_error">Error obteniendo usuario</string>
    <string name="not_last_trip_error">¡No tenes viajes para copiar!</string>

    <!--Nuevo viaje-->
    <string name="full_trip">Viaje completo</string>
    <string name="last_trip">Copiar ultimo viaje</string>
    <string name="from">Desde</string>
    <string name="to">Hasta</string>
    <string name="departure_date">Fecha</string>
    <string name="calendar_icon_description">Calendario</string>
    <string name="departure_hour">Hora</string>
    <string name="departure_stop">Lugar de subida</string>
    <string name="arrival_stop">Lugar de bajada</string>
    <string name="number_of_tickets">Cantidad de pasajes</string>
    <string name="passenger_name">Nombre de pasajero</string>
    <string name="passenger_dni">DNI pasajero</string>
    <string name="round_trip">Ida y vuelta</string>
    <string name="price">Precio: $</string>
    <string name="empty_name_error">Debe completar el nombre del pasajero</string>
    <string name="empty_dni_error">Debe completar el DNI del pasajero</string>
    <string name="invalid_dni">DNI Inválido</string>
    <string name="remaining_tickets_text">Pasajes restantes</string>
    <string name="trip_sold_out">Agotado</string>
    <!---->

    <!--Confirmar viaje-->
    <string name="from_colon">Desde:</string>
    <string name="to_colon">Hasta:</string>
    <string name="departure_date_colon">Fecha:</string>
    <string name="departure_hour_colon">Hora:</string>
    <string name="departure_stop_colon">Lugar de subida:</string>
    <string name="arrival_stop_colon">Lugar de bajada:</string>
    <string name="number_of_tickets_colon">Cantidad de pasajes:</string>
    <string name="price_colon">Debe pagar un total de : $</string>
    <!---->

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bank">Banco</string>
    <string name="bank_name">Banco Banquero</string>
    <string name="cbu">CBU</string>
    <string name="cbu_number">00000000000000000000001213213</string>
    <string name="reference_payment">Los pagos se realizaran via transferencia a la siguiente cuenta:</string>
    <string name="payment_information">Debe subir el comprobante y esperar a que su pago sea validado.</string>
    <string name="upload_receipt">Subir comprobante</string>
    <string name="alias_colon">Alias:</string>
    <string name="confirm">Confirmar</string>
    <string name="confirmation_text">Se está procesando su pago. Será notificado cuando se confirme su viaje</string>
    <string name="ready">¡Listo!</string>
    <string name="result_continue">Continuar</string>
    <string name="result_screen_label">Viaje Aceptado</string>
    <string name="must_complete_all_fields">Debe completar todos los campos</string>
    <string name="passwords_not_match">Las contraseñas no coinciden</string>
    <string name="passwords_too_short">La contraseña debe contener al menos ocho caracteres</string>
    <string name="invalid_email">Email inválido</string>

    <!--Registro-->
    <string name="register_title">Registro</string>
    <string name="register_name">Nombre y Apellido</string>
    <string name="register_dni">DNI</string>
    <string name="register_password">Password</string>
    <string name="register_re_enter_password">Repetir Password</string>
    <string name="register_button">Registrarse</string>
    <string name="register_cancel_button">Cancelar</string>
    <!---->

</resources>