<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.ConfirmTripFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

         <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/confirm_trip_tickets_recicler_view"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/confirm_trip_passengers_recicler_view"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <RelativeLayout
            android:id="@+id/trip_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/description_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/price_colon"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/value_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/description_import"
                android:layout_alignTop="@id/description_import"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/description_import"
                android:ems="10"
                android:text="1.500"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </RelativeLayout>

        <TextView
            android:id="@+id/legal_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/reference_payment" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bank_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:hint="@string/bank">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/bank_name"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bank_cbu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:focusable="false"
            android:hint="@string/cbu"
            app:endIconContentDescription="@string/calendar_icon_description"
            app:endIconDrawable="@drawable/ic_copy"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bank_cbu_textfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:text="@string/cbu_number"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bank_alias"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:focusable="false"
            android:hint="@string/alias_colon"
            app:endIconContentDescription="@string/calendar_icon_description"
            app:endIconDrawable="@drawable/ic_copy"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bank_alias_textfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:enabled="false"
                android:text="tour.app"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/upload_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/payment_information" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bank_upload_receipt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:focusable="false"
            android:enabled="false"
            android:hint="@string/upload_receipt"
            app:endIconContentDescription="@string/calendar_icon_description"
            app:endIconDrawable="@drawable/ic_upload"
            app:endIconMode="custom">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bank_upload_receipt_textfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/confirm" />
    </LinearLayout>

</ScrollView>