<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.ResultScreenFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="158dp"
            android:src="@drawable/check" />

        <TextView
            android:id="@+id/text_ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:text="@string/ready" />

        <TextView
            android:id="@+id/text_information"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:text="@string/confirmation_text"
            android:textSize="20dp" />

        <Button
            android:id="@+id/button_continue"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/result_continue" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</LinearLayout>