<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MyTripsDriverFragment">

    <fragment
        android:id="@+id/MyTripsFragment"
        android:name="com.unnamedgroup.tourapp.view.fragment.MyTripsFragment"
        android:label="@string/my_trips_fragment_label"
        tools:layout="@layout/fragment_my_trips">

        <action
            android:id="@+id/action_MyTripsFragment_to_tripDetailsFragment"
            app:destination="@id/tripDetailsFragment" />
        <action
            android:id="@+id/action_MyTripsFragment_to_tripsFragment"
            app:destination="@id/tripsFragment" />
    </fragment>
    <fragment
        android:id="@+id/MyTripsDriverFragment"
        android:name="com.unnamedgroup.tourapp.view.fragment.MyTripsDriverFragment"
        android:label="Viajes del Día"
        tools:layout="@layout/fragment_my_trips_driver">
        <action
            android:id="@+id/action_MyTripsDriverFragment_to_tripDetailsDriverFragment"
            app:destination="@id/TripDetailsDriverFragment" />
    </fragment>
    <fragment
        android:id="@+id/TripDetailsDriverFragment"
        android:name="com.unnamedgroup.tourapp.view.fragment.TripDetailsDriverFragment"
        android:label="Detalle del Viaje"
        tools:layout="@layout/fragment_trip_details_driver">
    </fragment>
    <fragment
        android:id="@+id/NewTripFragment"
        android:name="com.unnamedgroup.tourapp.view.fragment.NewTripFragment"
        android:label="@string/new_trip_fragment_label"
        tools:layout="@layout/fragment_new_trip">

        <action
            android:id="@+id/action_NewTripFragment_to_confirmTripFragment"
            app:destination="@id/confirmTripFragment" />
        <action
            android:id="@+id/action_NewTripFragment_to_tripsFragment"
            app:destination="@id/tripsFragment" />
    </fragment>
    <fragment
        android:id="@+id/confirmTripFragment"
        android:name="com.unnamedgroup.tourapp.view.fragment.ConfirmTripFragment"
        android:label="Confirmar Viaje"
        tools:layout="@layout/fragment_confirm_trip" >
        <action
            android:id="@+id/action_confirmTripFragment_to_NewTripFragment"
            app:destination="@id/NewTripFragment" />
        <action
            android:id="@+id/action_confirmTripFragment_to_resultScreenFragment"
            app:destination="@id/resultScreenFragment" />
    </fragment>
    <fragment
        android:id="@+id/resultScreenFragment"
        android:label="@string/result_screen_label"
        android:name="com.unnamedgroup.tourapp.view.fragment.ResultScreenFragment"
        tools:layout="@layout/fragment_result_screen" >
        <action
            android:id="@+id/action_resultScreenFragment_to_MyTripsFragment"
            app:destination="@id/MyTripsFragment" />
    </fragment>

    <fragment
        android:id="@+id/tripDetailsFragment"
        android:name="com.unnamedgroup.tourapp.view.fragment.TripDetailsFragment"
        android:label="@string/trip_details_fragment_label"
        tools:layout="@layout/fragment_trip_details" >
        <action
            android:id="@+id/action_tripDetailsFragment_to_MyTripsFragment"
            app:destination="@id/MyTripsFragment" />
        <action
            android:id="@+id/action_tripDetailsFragment_to_tripQrFragment"
            app:destination="@id/tripQrFragment" />
    </fragment>
    <fragment
        android:id="@+id/tripQrFragment"
        android:name="com.unnamedgroup.tourapp.view.fragment.TripQrFragment"
        android:label="@string/trip_qr_fragment_label"
        tools:layout="@layout/fragment_trip_qr" >
    </fragment>
    <fragment
        android:id="@+id/tripsFragment"
        android:name="com.unnamedgroup.tourapp.view.fragment.TripsFragment"
        android:label="@string/trips_fragment_label"
        tools:layout="@layout/fragment_trips" >
        <action
            android:id="@+id/action_tripsFragment_to_NewTripFragment"
            app:destination="@id/NewTripFragment" />
        <action
            android:id="@+id/action_tripsFragment_to_MyTripsFragment"
            app:destination="@id/MyTripsFragment" />
    </fragment>
</navigation>