<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.TripDetailsFragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginVertical="@dimen/screen_margin_vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/info_margin_horizontal"
            android:ellipsize="end"
            android:text="@string/details_trip_name"
            android:textSize="25dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/trip_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/info_margin_horizontal"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:text="@string/details_trip_name"
            android:layout_below="@+id/trip"
            android:textSize="15dp"
            android:textStyle="normal" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/trip_state"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dropdowns_margin_Horizontal"
            android:layout_marginVertical="@dimen/dropdowns_margin_vertical"
            android:hint="@string/trip_state"
            android:layout_below="@+id/trip_time">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/trip_state_text"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:focusable="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/departure_stop"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trip_state"
            android:layout_marginHorizontal="@dimen/dropdowns_margin_Horizontal"
            android:layout_marginVertical="@dimen/dropdowns_margin_vertical">

            <AutoCompleteTextView
                android:id="@+id/departure_stop_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_departure_stop"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/arrival_stop"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/departure_stop"
            android:layout_marginHorizontal="@dimen/dropdowns_margin_Horizontal"
            android:layout_marginVertical="@dimen/dropdowns_margin_vertical">

            <AutoCompleteTextView
                android:id="@+id/arrival_stop_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_arrival_stop"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/passengers_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/arrival_stop"
            android:layout_marginHorizontal="@dimen/recyclerview_margin_horizontal"
            android:layout_marginBottom="@dimen/recyclerview_margin_vertical" />

        <LinearLayout
            android:id="@+id/qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passengers_recyclerview"
            android:layout_marginVertical="@dimen/buttons_margin_Vertical"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qr_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_qr_button"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qr"
            android:layout_marginVertical="@dimen/buttons_margin_Vertical"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/buttons_margin_between"
                android:text="@string/details_cancel_button" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_save_button"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/info_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttons"
            android:layout_marginHorizontal="@dimen/info_margin_horizontal"
            android:text="@string/details_info" />

    </RelativeLayout>
</ScrollView>